objects/Deal_Issue__c.object
<CustomObject>
    <description>Any Deal Issue associated to Deal State</description>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_State__c</fullName>
        <label>Deal State</label>
        <referenceTo>Deal_State__c</referenceTo>
        <relationshipLabel>Deal Issue</relationshipLabel>
        <relationshipName>Deal_Issue</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <label>Issue Type</label>
        <picklist>
            <picklistValues>
                <fullName>Awaiting Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Site Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOM missing from bucket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business License missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy / Sell Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalog Number Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMF# Creation Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMF# set up correction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Corrections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controller/RGM put on hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRA/Business License Discrepancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designated Signature Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMG Incomplete Recap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMG Missing MDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMG No Discount approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMG Order Form Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illegible Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improper Routing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete CA Coversheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete Closing Report Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Baseline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect DSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect ISR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect RSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect TSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPAD: Client not eligible for iPAD promo due to discounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPAD: iPAD promo was received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPAD: No iPAD promo received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Deal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Deal Issue</label>
    <nameField>
        <displayFormat>DI - {000000}</displayFormat>
        <label>Deal Issue ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Issue</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>